--- a/SolrExpress.Core/Resource.resx
+++ b/SolrExpress.Core/Resource.resx
@@ -120,17 +120,23 @@
   <data name="AllowMultipleInstanceOfParameterTypeException" xml:space="preserve">
     <value>Parameter \"{0}\" is not allowed because another instance of the same type was added</value>
   </data>
-  <data name="FieldMustBeIndexedTrueToBeUsedInAFacet" xml:space="preserve">
+  <data name="FieldMustBeIndexedTrueToBeUsedInAFacetException" xml:space="preserve">
     <value>A field must be \"indexed=true\" to be used in a facet</value>
   </data>
-  <data name="FieldMustBeIndexedTrueToBeUsedInAQuery" xml:space="preserve">
+  <data name="FieldMustBeIndexedTrueToBeUsedInAQueryException" xml:space="preserve">
     <value>A field must be \"indexed=true\" to be used in a query</value>
   </data>
-  <data name="FieldMustBeNumericOrDateTimeToBeUsedInFacetRange" xml:space="preserve">
+  <data name="FieldMustBeNumericOrDateTimeToBeUsedInFacetRangeException" xml:space="preserve">
     <value>A field must be numeric or DateTime to be used in a facet range</value>
   </data>
-  <data name="FieldMustBeStoredTrueToBeUsedInFields" xml:space="preserve">
+  <data name="FieldMustBeStoredTrueToBeUsedInFieldsException" xml:space="preserve">
     <value>A field must be \"stored=true\" to be used in field list</value>
+  </data>
+  <data name="InvalidLatitudeException" xml:space="preserve">
+    <value>Latitude most be inside range from -90.0 to 90.0</value>
+  </data>
+  <data name="InvalidLongitudeException" xml:space="preserve">
+    <value>Longitude most be inside range from -180.0 to 180.0</value>
   </data>
   <data name="InvalidParameterTypeException" xml:space="preserve">
     <value>Parameter \"{0}\" throwed an exception:\r\n\"{1}\"</value>
