--- a/SolrExpress.Core/Resource.resx
+++ b/SolrExpress.Core/Resource.resx
@@ -163,6 +163,6 @@
     <value>Descending sort type is an unsupported feature in Solr 4</value>
   </data>
   <data name="UseSpecificParameterRatherThanAnyException" xml:space="preserve">
-    <value />
+    <value>Parameter \"{0}\" have a specific version</value>
   </data>
 </root>
