--- a/SolrExpress.Core/Resource-pt-BR.resx
+++ b/SolrExpress.Core/Resource-pt-BR.resx
@@ -118,22 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AllowMultipleInstanceOfParameterTypeException" xml:space="preserve">
-    <value>Parâmetro \"{0}\" não pode ser adicionado por já existir uma outra instância com o mesmo tipo</value>
+    <value>Parâmetro "{0}" não pode ser adicionado por já existir uma outra instância com o mesmo tipo</value>
   </data>
   <data name="ExpressionMustBePropertyException" xml:space="preserve">
     <value>Expressão deve referenciar uma propriedade</value>
   </data>
   <data name="FieldMustBeIndexedTrueToBeUsedInAFacet" xml:space="preserve">
-    <value>Um campo deve ser \"indexed=true\" para ser usado em facet</value>
+    <value>Um campo deve ser "indexed=true" para ser usado em facet</value>
   </data>
   <data name="FieldMustBeIndexedTrueToBeUsedInAQuery" xml:space="preserve">
-    <value>Um campo deve ser \"indexed=true\" para ser usado em query</value>
+    <value>Um campo deve ser "indexed=true" para ser usado em query</value>
   </data>
   <data name="FieldMustBeNumericOrDateTimeToBeUsedInFacetRange" xml:space="preserve">
     <value>Um campo deve ser numérico ou de data para ser usado em facet range</value>
   </data>
   <data name="FieldMustBeStoredTrueToBeUsedInFields" xml:space="preserve">
-    <value>Um campo deve ser \"stored=true\" para ser usado em fields</value>
+    <value>Um campo deve ser "stored=true" para ser usado em fields</value>
   </data>
   <data name="InvalidLatitudeException" xml:space="preserve">
     <value>A latitude deve estar entre -90.0 e 90.0</value>
@@ -142,19 +142,19 @@
     <value>A longitude deve estar entre -18.0 e 180.0</value>
   </data>
   <data name="InvalidParameterTypeException" xml:space="preserve">
-    <value>Parâmetro \"{0}\" lançou a exceção:\r\n\"{1}\"</value>
+    <value>Parâmetro "{0}", mensagem de validação: "{1}"</value>
   </data>
   <data name="UnexpectedDependencyInjectionMappingException" xml:space="preserve">
-    <value>Não foi possível resolver o type \"{0}"\\r\nNão foi encontrado um mapping para o type</value>
+    <value>Não foi possível resolver o type "{0}". Não foi encontrado um mapping para o type</value>
   </data>
   <data name="UnexpectedJsonException" xml:space="preserve">
-    <value>O parâmetro \"{0}\" não foi encontrado no json de origem</value>
+    <value>O parâmetro "{0}" não foi encontrado no json de origem</value>
   </data>
   <data name="UnexpectedSolrRequestException" xml:space="preserve">
     <value>Não existe resolução para a requisição efetuada ao Solr</value>
   </data>
   <data name="UnknownResolveResultBuilderException" xml:space="preserve">
-    <value>Não foi possível efetuar a conversão por causa que o builder \"{0}\" não implementa IConvertJsonObject ou IConvertJsonPlainText</value>
+    <value>Não foi possível efetuar a conversão por causa que o builder "{0}" não implementa IConvertJsonObject ou IConvertJsonPlainText</value>
   </data>
   <data name="UnknownToResolveExpressionException" xml:space="preserve">
     <value>Não existe resolução para a expressão</value>
@@ -163,6 +163,6 @@
     <value>Ordenação do tipo descendente é um aspecto não suportado no Solr 4</value>
   </data>
   <data name="UseSpecificParameterRatherThanAnyException" xml:space="preserve">
-    <value>O parâmetro \"{0}\" possui uma versão específica</value>
+    <value>O parâmetro "{0}" possui uma versão específica</value>
   </data>
 </root>
