--- a/SolrExpress.Core/Resource.resx
+++ b/SolrExpress.Core/Resource.resx
@@ -118,22 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AllowMultipleInstanceOfParameterTypeException" xml:space="preserve">
-    <value>Parameter \"{0}\" is not allowed because another instance of the same type was added</value>
+    <value>Parameter "{0}" is not allowed because another instance of the same type was added</value>
   </data>
   <data name="ExpressionMustBePropertyException" xml:space="preserve">
     <value>Expression must be a property reference</value>
   </data>
   <data name="FieldMustBeIndexedTrueToBeUsedInAFacetException" xml:space="preserve">
-    <value>A field must be \"indexed=true\" to be used in a facet</value>
+    <value>A field must be "indexed=true" to be used in a facet</value>
   </data>
   <data name="FieldMustBeIndexedTrueToBeUsedInAQueryException" xml:space="preserve">
-    <value>A field must be \"indexed=true\" to be used in a query</value>
+    <value>A field must be "indexed=true" to be used in a query</value>
   </data>
   <data name="FieldMustBeNumericOrDateTimeToBeUsedInFacetRangeException" xml:space="preserve">
     <value>A field must be numeric or DateTime to be used in a facet range</value>
   </data>
   <data name="FieldMustBeStoredTrueToBeUsedInFieldsException" xml:space="preserve">
-    <value>A field must be \"stored=true\" to be used in field list</value>
+    <value>A field must be "stored=true" to be used in field list</value>
   </data>
   <data name="InvalidLatitudeException" xml:space="preserve">
     <value>Latitude most be inside range from -90.0 to 90.0</value>
@@ -142,19 +142,19 @@
     <value>Longitude most be inside range from -180.0 to 180.0</value>
   </data>
   <data name="InvalidParameterTypeException" xml:space="preserve">
-    <value>Parameter \"{0}\" throwed an exception:\r\n\"{1}\"</value>
+    <value>Parameter "{0}" validation message: "{1}"</value>
   </data>
   <data name="UnexpectedDependencyInjectionMappingException" xml:space="preserve">
-    <value>Unknown to resolve type \"{0}"\\r\nMapping not found</value>
+    <value>Unknown to resolve type "{0}". Mapping not found</value>
   </data>
   <data name="UnexpectedJsonException" xml:space="preserve">
-    <value>Parameter \"{0}\" was not found in the source json</value>
+    <value>Parameter "{0}" was not found in the source json</value>
   </data>
   <data name="UnexpectedSolrRequestException" xml:space="preserve">
     <value>Unknown to resolve solr query request</value>
   </data>
   <data name="UnknownResolveResultBuilderException" xml:space="preserve">
-    <value>Unknown resolve of the result builder type \"{0}\" because this type doesn't implement IConvertJsonObject or IConvertJsonPlainText</value>
+    <value>Unknown resolve of the result builder type "{0}" because this type doesn't implement IConvertJsonObject or IConvertJsonPlainText</value>
   </data>
   <data name="UnknownToResolveExpressionException" xml:space="preserve">
     <value>Unknown to resolve the expression</value>
@@ -163,6 +163,6 @@
     <value>Descending sort type is an unsupported feature in Solr 4</value>
   </data>
   <data name="UseSpecificParameterRatherThanAnyException" xml:space="preserve">
-    <value>Parameter \"{0}\" have a specific version</value>
+    <value>Parameter "{0}" have a specific version</value>
   </data>
 </root>
